<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StudentView">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="es.cybercrim.pwn.permtest.MainActivity">

        <TextView
            android:id="@+id/mainText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_sign_in2"
            android:paddingTop="16dp"
            android:text="@string/add_mac_prompt" />

        <Button
            android:id="@+id/btn_enable2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_enable" />

        <Button
            android:id="@+id/btn_sign_in2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_enable2"
            android:enabled="false"
            android:text="@string/text_sign_in" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainText2">

            <EditText
                android:id="@+id/add_device_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainText2"
                android:hint="@string/prompt_add_device"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_add_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_device_text"
                android:text="@string/add_device" />
        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>
</LinearLayout>